# cmake_learning_repo

./: .gitignore  README.md
cmake-tutorial-source/Step0/build-ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
cmake-tutorial-source/Step1/: CMakeLists.txt
cmake-tutorial-source/Step1/MathFunctions/: CMakeLists.txt
cmake-tutorial-source/Step1/Tutorial/: CMakeLists.txt  Tutorial.cxx
cmake-tutorial-source/Step10/TutorialProject/Tests/: CMakeLists.txt  TestMathFunctions.cxx
cmake-tutorial-source/Step10/install/lib/cmake/SimpleTest/: SimpleTestConfigVersion.cmake  SimpleTestTargets.cmake
cmake-tutorial-source/Step3/: CMakeLists.txt
cmake-tutorial-source/Step3/MathFunctions/: MathFunctions.cxx
cmake-tutorial-source/Step3/Tutorial/: Tutorial.cxx
cmake-tutorial-source/Step4/: CMakeLists.txt
cmake-tutorial-source/Step4/MathFunctions/: MathFunctions.cxx
cmake-tutorial-source/Step4/Tutorial/: CMakeLists.txt
cmake-tutorial-source/Step9/: CMakeLists.txt
